[tool.poetry]
name = "driving-control-clients"
version = "0.1.0"
description = "Mobile web interface for driving controls"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
hypercorn = "^0.16.0"
uvicorn = "^0.24.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
